...
        NewTaskFloatingActionButton(expanded = true, onNewTaskClick = {})
    }
}

@Composable
fun TaskItem(
    task: Task,
    onEdit: (Task) -> Unit,
    onToggle: () -> Unit,
    modifier: Modifier = Modifier
) {
    val priorityColor = remember(task.priorityType) {
        when (task.priorityType) {
...
        verticalAlignment = Alignment.CenterVertically,
        modifier = modifier
            .fillMaxWidth()
            .padding(8.dp)
            .clip(MaterialTheme.shapes.small)
            .clickable(onClick = { onEdit(task) })
            .testTag("Task")
    ) {
        Checkbox(
            checked = task.isDone,
            onCheckedChange = { onToggle() },
            colors = CheckboxDefaults.colors(
                uncheckedColor = priorityColor,
            ),
            modifier = Modifier.testTag("Toggle")
        )
        Column(
            modifier = Modifier
                .weight(1f)
                .padding(vertical = 8.dp)
                .padding(end = 8.dp),
...

@Preview(showBackground = true)
@Composable
private fun TaskItemPreview() {
    ToDoAppTheme {
        TaskItem(
            task = Task(title = "Clean my room up"),
            onEdit = {},
            onToggle = {}
        )
    }
}

...
        }
    }

    LazyColumn(
        modifier = modifier
            .padding(innerPadding)
            .testTag("Tasks List"),
        state = lazyListState,
        contentPadding = PaddingValues(top = 0.dp, bottom = 72.dp)
    ) {
        if (displayName.isNotEmpty()) {
            item {
                Column(
...
