...
                                },
                                colors = SwitchDefaults.colors(
                                    uncheckedTrackColor = MaterialTheme.colorScheme.background
                                ),
                                modifier = Modifier
                                    .padding(end = 16.dp)
                                    .testTag("Show Statistics")
                            )
                        }
                    }
                }

                item {
...
